tests/exceptions/ill-typed/unexpected-type-for-expression-try-with-3.stella
language core;

extend with #exceptions, #exception-type-declaration;

exception type = Nat

fn main(n : Nat) -> Bool {
  return try {
    true
  } catch {
    a => succ(0)
  }
}
